# realworld-python-example-app

./: .cspell.json  .editorconfig  README.md
.cspell/: project.txt  python.txt
.github/workflows/: ci.yaml
apps/server/: Makefile  pyproject.toml  settings.toml
apps/server/server/: app.py  main.py
apps/server/server/config/: __init__.py  route.py
apps/server/server/error/: __init__.py  api_error.py  api_error_bad_request.py  api_error_conflict.py  api_error_internal_server.py  api_error_unprocessable_entity.py  default_error_config.py
apps/server/server/user/: __init__.py  route.py
apps/server/server/user/controller/: __init__.py  registration.py
apps/server/server/user/dto/: __init__.py  api_input_registration.py  dto_profile.py  dto_user.py
apps/server/server/user/service/: api_registration.py  factory.py
apps/server/server/utils/: handle_exception.py  json_web_token.py
apps/server/tests/: test_health_check.py  test_json_web_token.py
apps/server/tests/unit/: test_json_web_token.py  test_registration.py
